# aedes

./: README.md
poly-event-sniper/: .env.example  .gitignore  README.md  SUMMARY.md  main.py  mypy.ini  pyproject.toml  test_tui_demo.py  test_tui_minimal.py
poly-event-sniper/docs/: DEPLOY.md  phase7-spec.xml
poly-event-sniper/scripts/: verify_connection.py
poly-event-sniper/src/: __init__.py  callbacks.py  config.py  exceptions.py  models.py  orchestrator.py
poly-event-sniper/src/discovery/: __init__.py  client.py  models.py
poly-event-sniper/src/executors/: __init__.py  polymarket.py
poly-event-sniper/src/ingesters/: __init__.py  external.py  polymarket.py  rss.py
poly-event-sniper/src/interfaces/: executor.py  ingester.py  parser.py  strategy.py
poly-event-sniper/src/managers/: __init__.py  portfolio.py  subscription.py
poly-event-sniper/src/parsers/: keyword.py  threshold.py
poly-event-sniper/src/persistence/: __init__.py  database.py  schema.py  trade_logger.py
poly-event-sniper/src/strategies/: __init__.py  parser_adapter.py
poly-event-sniper/src/tui/: __init__.py  app.py  log_sink.py  theme.tcss
poly-event-sniper/tests/: test_database.py  test_event_sniping.py  test_execution.py  test_external_ingester.py  test_gamma_discovery.py  test_ingestion.py  test_keyword_parser.py  test_models_phase7.py  test_orchestrator.py  test_orchestrator_phase7.py  test_parsing.py  test_persistence.py  test_portfolio_manager.py  test_rss_ingester.py  test_strategy.py  test_subscription_manager.py  test_wallet_manager.py
(+19 files in other folders)
